--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,10 @@ dependencies {
     testImplementation(
             "com.codeborne:selenide:$selenideVersion",
             "org.junit.jupiter:junit-jupiter-api:$junitVersion",
-            "com.github.javafaker:javafaker:1.0.2")
+            "org.junit.jupiter:junit-jupiter-params:$junitVersion",
+            "com.github.javafaker:javafaker:1.0.2",
+            "org.hamcrest:hamcrest-all:1.3",
+            "com.fasterxml.jackson.core:jackson-databind:2.10.3")
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
 }
 
