--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ dependencies {
             "org.junit.jupiter:junit-jupiter-params:$junitVersion",
             "com.github.javafaker:javafaker:1.0.2",
             "org.hamcrest:hamcrest-all:1.3",
+            "org.assertj:assertj-core:3.19.0",
             "com.fasterxml.jackson.core:jackson-databind:2.10.3")
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
 }
